add styles for pomodoro

--- a/src/app/actions/actions.component.html
+++ b/src/app/actions/actions.component.html
@@ -1,5 +1,5 @@
-<div>
-  <button mat-raised-button color="primary">Start</button>
-  <button mat-raised-button color="warn">Stop</button>
-  <button mat-raised-button color="accent">Reset</button>
+<div class="flex-container justify-content actions">
+  <button mat-raised-button color="primary" class="action-item">Start</button>
+  <button mat-raised-button color="warn" class="action-item">Stop</button>
+  <button mat-raised-button color="accent" class="action-item">Reset</button>
 </div>
