--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<mat-toolbar color="primary">My App</mat-toolbar>
+<mat-toolbar color="primary" role="title">Pomodoro App</mat-toolbar>
 <router-outlet></router-outlet>
