--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.flex-container {
+    display: flex;
+}
+.main-container {
+    width: 100%;
+}
+.space-between {
+    justify-content: space-between
+}
+.center {
+    justify-content: center;
+}
