--- a/src/app/app-shell/app-shell.component.html
+++ b/src/app/app-shell/app-shell.component.html
@@ -1,3 +1,3 @@
 <div class="flex-container center spinner">
-  <mat-spinner mode="indeterminate"></mat-spinner>
+  <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
 </div>
