--- a/src/app/actions/actions.component.html
+++ b/src/app/actions/actions.component.html
@@ -1,5 +1,5 @@
 <div class="flex-container justify-content actions">
-  <button mat-raised-button color="primary" class="action-item">Start</button>
+  <button mat-raised-button color="primary" class="action-item" (click)="startTimer()">Start</button>
   <button mat-raised-button color="warn" class="action-item">Stop</button>
   <button mat-raised-button color="accent" class="action-item">Reset</button>
 </div>
